# MonkeyMaze64

./: .gitignore  CMakeLists.txt  README.md
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: image.h  mesh.h  window.h
framework/src/: image.cpp  mesh.cpp  window.cpp
shaders/: debug.frag  debug.vert  hdr.frag  phong.frag  screen-quad.vert  shader_vert.glsl  shadow_point.frag  shadow_point.geom
shaders/debug/: light_debug.frag  light_debug.vert
shaders/deferred/: deferred.frag  deferred.vert
shaders/hdr/: hdr.frag
shaders/lighting/: deferred_lighting.vert  lambert_blinn_phong.frag  lambert_diffuse.frag  lambert_phong.frag  pbr.frag  phong.frag  phong_specular.frag  toon.frag  xtoon.frag
shaders/particles/: particles.frag  particles.vert
shaders/shadows/: shadow_point.frag  shadow_point.geom  shadow_point.vert  shadow_stock.vert
src/: CMakeLists.txt  application.cpp  board.h  camera.h  client  client.cpp  main.cpp  server.py
src/gameplay/: enemy_camera.h
src/generator/: board.cpp  board.h  board.hpp  generator  generator.cpp  generator.h  node.h  t
src/movements/: bezier.h
src/networking/: client.cpp  server.py
src/render/: bezier.cpp  bezier.h  bloom.cpp  bloom.h  config.h  deferred.cpp  deferred.h  lighting.cpp  lighting.h  mesh.cpp  mesh.h  mesh_tree.cpp  mesh_tree.h  particle.cpp  particle.h  scene.cpp  scene.h  ssao.cpp  ssao.h  texture.cpp  texture.h
src/ui/: camera.cpp  camera.h  menu.cpp  menu.h
src/utils/: constants.h  cutscene_utils.hpp  hitBox.h  hitbox.hpp  misc_utils.hpp  render_utils.hpp  util.h
(+9 files in other folders)
